work card desctop version & slider

--- a/src/assets/data/projects.json
+++ b/src/assets/data/projects.json
@@ -1,13 +1,18 @@
 [{
   "id": 1,
   "title": "work1",
-  "deploy": "link1",
+  "links": [
+    {
+      "name": "Посетить сайт",
+      "link": "link2"
+    }
+  ],
   "color": "white",
   "stack": ["React", "CSS", "JavaScript", "React Router", "Redux Toolkit", "Vite"],
   "screenshots": [
-    "src/assets/screenshots/grey.png", 
-    "src/assets/screenshots/skyblue.png",
-    "src/assets/screenshots/purple.png"
+    "src/assets/images/art2.png", 
+    "src/assets/images/art2-1.png",
+    "src/assets/images/art2-2.png"
   ],
   "thumbnail": "src/assets/screenshots/grey.png",
   "text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
@@ -15,15 +20,25 @@
 {
   "id": 2,
   "title": "work2",
-  "repo": "link1",
-  "deploy": "link2",
-  "additional": "link3",
+  "links": [
+    {
+      "name": "Посетить сайт",
+      "link": "link2"
+    },
+    {
+      "name": "Версия с хакатона",
+      "link": "link3"
+    },
+    {
+      "name": "Посмотреть код",
+      "link": "link1"
+    }
+  ],
   "color": "lightgrey",
   "stack": ["HTML5", "SCSS", "JavaScript", "Vite"],
   "screenshots": [
-    "src/assets/screenshots/green.png", 
-    "src/assets/screenshots/mint.png",
-    "src/assets/screenshots/dgreen.png"
+    "src/assets/images/conbuild2.png", 
+    "src/assets/images/conbuild2-1.png"
   ],
   "thumbnail": "src/assets/screenshots/mint.png",
   "text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
@@ -31,14 +46,21 @@
 {
   "id": 3,
   "title": "work3",
-  "repo": "link1",
-  "deploy": "link2",
+  "links": [
+    {
+      "name": "Посетить сайт",
+      "link": "link2"
+    },
+    {
+      "name": "Посмотреть код",
+      "link": "link1"
+    }
+  ],
   "color": "lightblue",
   "stack": ["React", "CSS", "Next.JS", "Redux Toolkit", "Vite"],
   "screenshots": [
-    "src/assets/screenshots/red.png", 
-    "src/assets/screenshots/burgundy.png",
-    "src/assets/screenshots/orange.png"
+    "src/assets/images/canban.png", 
+    "src/assets/images/canban-1.png"
   ],
   "thumbnail": "src/assets/screenshots/orange.png",
   "text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
