--- a/src/assets/data/projects.json
+++ b/src/assets/data/projects.json
@@ -15,7 +15,7 @@
     "src/assets/images/art2-1.png",
     "src/assets/images/art2-2.png"
   ],
-  "thumbnail": "",
+  "thumbnail": "src/assets/images/card_art.png",
   "text": "Этот проект я делала для иллюстратора, рисующего красочные работы на заказ. На сайте можно посмотреть обширную галерею уже созданных изображений, узнать все условия обслуживания, а также, конечно, выйти на контакт с художником.\nУ сайта есть своя панель администратора, созданная при помощи Headless Wordpress. Хостится все это на своем VPS-сервере. Со всеми этими технологиями на момент разработки я столкнулась впервые, так что пришлось много в чем разбираться! Но я рада финальному результату, а особенно его визуальной составляющей, над которой я трудилась по дизайнам заказчика."
 },
 {
@@ -40,9 +40,11 @@
   "stack": ["HTML5", "SCSS", "JavaScript", "Vite"],
   "screenshots": [
     "src/assets/images/conbuild2.png", 
-    "src/assets/images/conbuild2-1.png"
+    "src/assets/images/conbuild2-1.png",
+    "src/assets/images/conbuild2-2.png",
+    "src/assets/images/conbuild2-3.png"
   ],
-  "thumbnail": "",
+  "thumbnail": "src/assets/images/card_conbuild.png",
   "text": "Продающая страница для выдуманной организации. Изначально разрабатывалась в команде на благотворительном хакатоне для фронтендеров. Для меня это была отличная практика верстки, а также прекрасная возможность изучить SCSS и поупражняться в создании слайдеров на чистом JavaScript. После окончания ивента уже лично мной было принято решение доработать проект, поправить его недочеты и сделать для него адаптив.\nВсе внедренные изменения описаны в README проекта."
 },
 {
